--- a/bower.json
+++ b/bower.json
@@ -5,10 +5,11 @@
     "cqrsjs-master": "git@github.com:tmorin/cqrsjs.git#master",
     "base64": "~0.3.0",
     "classlist": "~2013.5.14",
-    "html5shiv-dist": "~3.6.2",
     "requestAnimationFrame-polyfill": "*",
     "x-tag-core": "~0.9.7",
-    "x-mixin-templated": "~0.0.1"
+    "x-mixin-templated": "~0.0.1",
+    "bootstrap": "~3.1.1",
+    "font-awesome": "~4.1.0"
   },
   "devDependencies": {}
 }
