--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shoplist-master",
-  "version": "0.1.0",
+  "name": "shoplist-master2",
+  "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
