--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-jshint": "~0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-firefox-manifest": "^0.1.3",
     "grunt-gh-pages": "^0.9.1",
     "grunt-mocha": "~0.4.10",
     "grunt-newer": "~0.7.0",
@@ -29,5 +30,9 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "firefoxManifest": {
+    "appcache_path": "/manifest.appcache",
+    "launch_path": "/"
   }
 }
