--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-appcache": "^0.1.4",
     "grunt-autoprefixer": "~0.7.2",
     "grunt-bower-install": "~1.4.0",
     "grunt-concurrent": "~0.5.0",
